Xfce v4.18: Fix odd gap between panel elements

--- a/gtk-3.20/apps/_xfce.scss
+++ b/gtk-3.20/apps/_xfce.scss
@@ -1,4 +1,5 @@
 .xfce4-panel {
+  border-radius: 0;
     &.background {
         background-color: $panel_bg_color;
         color: $fg_color;
